gateway/security/jwt/entraID/tickets/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tickets-ingress
  annotations:
    hub.traefik.io/api: tickets-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tickets.traefik-airlines`) || Host(`tickets.traefik-airlines.localhost`)
      services:
        - name: tickets-app
          port: 3000
      middlewares:
        - name: jwt-entra-id
